<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_addding_subject"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="justyna.example.com.organizerstudencki.AddingSubjectActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/subjectName_editText"
        android:hint="@string/nazwa_przedmiotu"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/jakie_zaj_cia_przewiduje_przedmiot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:textSize="15sp"
        android:id="@+id/whichLessons_textView"
        android:layout_below="@+id/subjectName_editText"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/wyk_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lessonLecture_checkBox"
        android:layout_weight="1"
        android:layout_above="@+id/lesson_exercise_checkBox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lesson_exercise_checkBox"
        android:layout_weight="1"
        android:text="@string/cwiczenia"
        android:layout_marginBottom="34dp"
        android:layout_alignBottom="@+id/lessonLaboratoryCheckBox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/laboratoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lessonLaboratoryCheckBox"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/dalej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/lessonLaboratoryCheckBox"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
