<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="justyna.example.com.organizerstudencki.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:layout_marginStart="55dp"
        android:layout_marginTop="81dp"
        android:id="@+id/subjects_imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:id="@+id/agenda_imageButton"
        android:layout_below="@+id/subjects_imageButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_agenda"
        android:id="@+id/tasks_imageButton"
        android:layout_below="@+id/agenda_imageButton"
        android:layout_alignStart="@+id/subjects_imageButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        android:id="@+id/lecturers_imageButton"
        android:layout_below="@+id/tasks_imageButton"
        android:layout_alignStart="@+id/agenda_imageButton" />

    <TextView
        android:text="@string/przedmioty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subjects_imageButton"
        android:layout_alignStart="@+id/subjects_imageButton"
        android:id="@+id/subjects_textView" />

    <TextView
        android:text="@string/plan_zaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agenda_textView"
        android:layout_below="@+id/agenda_imageButton"
        android:layout_alignStart="@+id/agenda_imageButton" />

    <TextView
        android:text="@string/zadania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasks_imageButton"
        android:layout_alignEnd="@+id/tasks_imageButton"
        android:id="@+id/tasks_textView" />

    <TextView
        android:text="@string/wyk_adowcy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lecturers_textView"
        android:layout_below="@+id/lecturers_imageButton"
        android:layout_alignEnd="@+id/agenda_textView" />
</RelativeLayout>
